--- a/video-player/src/main/resources/application.properties
+++ b/video-player/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/static/
+spring.thymeleaf.suffix=.html
 
+spring.application.name=Bootstrap Spring Boot
