--- a/video-player/src/main/resources/application.properties
+++ b/video-player/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/static/
 spring.thymeleaf.suffix=.html
-
-spring.application.name=Bootstrap Spring Boot
+spring.application.name=Video Player
+server.port=5000
